--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/osuny"]
 	path = themes/osuny
 	url = https://github.com/osunyorg/theme.git
+[submodule "themes/osuny-masonry"]
+	path = themes/osuny-masonry
+	url = git@github.com:osunyorg/osuny-masonry.git
