--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -20,3 +20,6 @@ params:
     single:
       summary:
         position: content # hero | content
+  projects:
+    share_links:
+      enabled: false
