--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -8,6 +8,12 @@ pagination:
 params:
   debug:
     productionUrl: "https://www.diapason-agence.fr"
+  default:
+    index:
+      taxonomies:
+        display: true
+        layout: inline
+        show_name: false
   summary:
     position: hero
   search:
